[package]
name = "cardano-utxo-monitor"
version = "1.0.0"
edition = "2021"
rust-version = "1.84.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
actix-cors = "0.7.0"
tokio = "1.41.1"
serde = { version = "1.0.210", features = ["derive"] }
log = "0.4.22"
log4rs = "1.3.0"
tracing = "0.1.31"
tracing-subscriber = "0.3.17"
serde_json = "1.0.121"
clap = { version = "4.5.17", features = ["derive"] }
derive_more = { version = "1.0.0", features = ["full"] }
async-primitives = { version = "0.1.0", path = "packages/concurrent-primitives" }
cml-crypto = { git = "https://github.com/oskin1/cardano-multiplatform-lib.git", rev = "13c35772222fc46b26177a62726720502bdf21e4" }
cml-chain = { git = "https://github.com/oskin1/cardano-multiplatform-lib.git", rev = "13c35772222fc46b26177a62726720502bdf21e4" }
spectrum-offchain = { version = "0.1.0", path = "packages/spectrum-offchain", features = ["cml-chain"] }
spectrum-cardano-lib = { version = "0.1.0", path = "packages/spectrum-cardano-lib" }
spectrum-offchain-cardano = { version = "1.0.0", path = "packages/spectrum-offchain-cardano" }
bloom-offchain-cardano = { version = "1.0.0", path = "packages/bloom-offchain-cardano" }
spectrum-streaming = { version = "0.1.0", path = "packages/spectrum-streaming" }
cardano-chain-sync = { version = "0.1.0", path = "packages/cardano-chain-sync" }
cardano-mempool-sync = { version = "0.1.0", path = "packages/cardano-mempool-sync" }
futures = "0.3.30"
async-trait = "0.1.81"
rocksdb = "0.22.*"
rmp-serde = "1.3.0"
tempfile = "3.10.1"
hex = "0.4.3"
cml-core = { git = "https://github.com/oskin1/cardano-multiplatform-lib.git", rev = "13c35772222fc46b26177a62726720502bdf21e4" }
utoipa = { version = "5.2.0", features = ["macros", "actix_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
